k3s/apps/scoreboard-seedbox-cri/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: scoreboard
spec:
  type: ClusterIP
  selector:
    component: scoreboard
  ports:
    - name: http
      port: 8000
      targetPort: 8000
