k3s/apps/scoreboard-seedbox-cri/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scoreboard
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  ingressClassName: public
  rules:
    - host: scoreboard-seedbox-cri.risson.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scoreboard
                port:
                  name: http
  tls:
    - hosts:
        - scoreboard-seedbox-cri.risson.space
      secretName: scoreboard-tls
